fixed navbar overflow

--- a/src/components/Headers/Navbar.css
+++ b/src/components/Headers/Navbar.css
@@ -2,7 +2,7 @@
   position: sticky;
   top: 0;
   left: 0;
-  width: 100vw;
+  width: 100%;
   height: 60px;
   z-index: 1000;
   display: flex;
